--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
 </head>
 <body>
     <header>
+        <div>
+            <ul>
+                <li></li>
+            </ul>
+        </div>
+        <div>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>Quem sou</li>
+                    <li>O que faço</li>
+                    <li>tools</li>
+                    <li>Fale conosco</li>
+                </ul>
+            </nav>
+        </div>
         
     </header>
     
