--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
                         Alencar
                     </p>
                 </div>
-                <div class="me-img"><img src="../assets/Imagens/eu .png" alt="" height="300px" ></div>
+                <div class="me-img"><img src="../assets/Imagens/Imagem do WhatsApp de 2022-10-23 à(s) 20.55.13.jpg" alt="" height="300px" ></div>
                 <div class="about-me">
                     <h2>Olá!</h2>
                     <p>Me chamo Miguel e estou em transição de carreira para a área de tecnologia. Apesar de sempre ter sido
