--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         <!--MENU BOTTOM-->
         <div id="menu-bottom">
             <ul id="nav-menu">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Quem sou</a></li>
                 <li><a href="#">O que faço</a></li>
                 <li><a href="#">tools</a></li>
@@ -55,7 +55,8 @@
                         Alencar
                     </p>
                 </div>
-                <div class="me-img"><img src="../assets/Imagens/Imagem do WhatsApp de 2022-10-23 à(s) 20.55.13.jpg" alt="" height="300px" ></div>
+                <div class="me-img"><img src="../assets/Imagens/gigi.png" height="300px" alt="">
+                </div>
                 <div class="about-me">
                     <h2>Olá!</h2>
                     <p>Me chamo Miguel e estou em transição de carreira para a área de tecnologia. Apesar de sempre ter sido
