--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/public/index.css">
+    <link rel="stylesheet" href="public/index.js">
     <title>CV Digital</title>
 </head>
 
 <body>
     <header>
         <!--MENU TOP-->
+        
         <div id="menu-top">
             <ul id="social-menu">
                 <li><a href="https://contate.me/miguel-amaral-dev" target="_blank"><img
@@ -33,13 +36,16 @@
             <h2>Front end developer</h2>
         </div>
         <!--MENU BOTTOM-->
+        <div id="burguer" onclick="openMenu()"><span class="material-icons">menu</span></div>
         <div id="menu-bottom">
             <ul id="nav-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Quem sou</a></li>
-                <li><a href="#">O que faço</a></li>
-                <li><a href="#">tools</a></li>
-                <li><a href="#">Fale conosco</a></li>
+                <div id="itens">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Quem sou</a></li>
+                    <li><a href="#">O que faço</a></li>
+                    <li><a href="#">tools</a></li>
+                    <li><a href="#">Fale conosco</a></li>
+                </div>
             </ul>
 
         </div>
