--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/public/index.css">
-    <script src="public/index.js"></script>
+    <link rel="stylesheet" href="index.css">
+    <script src="index.js"></script>
     <title>CV Digital</title>
 </head>
 
