--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div id="menu-top">
             <ul id="social-menu">
                 <li><a href="https://contate.me/miguel-amaral-dev" target="_blank"><img
-                            src="../assets/Imagens/whatsapp.png" height="30px" alt="whatsapp-logo"></a></li>
-                <li><a href="https://github.com/miguelamaral254" target="_blank"><img src="../assets/Imagens/github.png"
+                            src="assets/Imagens/whatsapp.png" height="30px" alt="whatsapp-logo"></a></li>
+                <li><a href="https://github.com/miguelamaral254" target="_blank"><img src="assets/Imagens/github.png"
                             height="30px" alt="github-logo"></a></li>
                 <li><a href="https://www.linkedin.com/in/miguel-augusto-8b7350217/" target="_blank"><img
-                            src="../assets/Imagens/linkedin.png" height="30px" alt="linkedin-logo"></a></li>
+                            src="assets/Imagens/linkedin.png" height="30px" alt="linkedin-logo"></a></li>
             </ul>
             <ul id="contato">
                 <li><a href="https://contate.me/miguel-amaral-dev">Contato:</a></li>
@@ -32,7 +32,7 @@
         <!--MENU MIDDLE-->
         <div id="menu-middle">
             <h2>Miguel Amaral</h2>
-            <img src="../assets/Imagens/eu .png" height="250px" alt="">
+            <img src="assets/Imagens/eu .png" height="250px" alt="">
             <h2>Front end developer</h2>
         </div>
         <!--MENU BOTTOM-->
@@ -70,7 +70,7 @@
                         Alencar
                     </p>
                 </div>
-                <div class="me-img"><img src="../assets/Imagens/gigi.png" height="300px" alt="">
+                <div class="me-img"><img src="assets/Imagens/gigi.png" height="300px" alt="">
                 </div>
                 <div class="about-me">
                     <h2>Olá!</h2>
