--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     </header>
     <main>
-        <section class="about-me-section">
+        <section id="about-me-section">
             <div class="conteiner">
                 <div class="quote">
                     <h2>Citação</h2>
@@ -74,21 +74,7 @@
                 </div>
                 <div class="about-me">
                     <h2>Olá!</h2>
-                    <p>Me chamo Miguel e estou em transição de carreira para a área de tecnologia. Apesar de sempre ter
-                        sido
-                        entusiasta da área, acabei optando por ingressar na área da licenciatura pois eu acredito que
-                        apenas
-                        a
-                        educação pode mudar nossa vida. Durante meu curto período como professor, eu tentei pensar em
-                        alternativas de incluir a tecnologia na sala de aula e acabei me envolvendo e me identificando
-                        com
-                        programação, principalmente com a parte de front-end. Sou do tipo de pessoa que analisa bem as
-                        situações
-                        e procura sempre resolver o mais rápido possível o problema. Preocupo-me em sempre entregar as
-                        demandas
-                        no prazo, e sempre que há um pouco mais de tempo, tento implementar, caso haja coerência com o
-                        projeto.
-                        Comunico-me muito bem e estou sempre tentando aprender mais.</p>
+                    <p>	Me chamo Miguel e estou em transição de carreira para a área de tecnologia. Apesar de sempre ter sido entusiasta da área,  acabei optando por ingressar  na área da licenciatura. Durante meu curto período como professor, eu tentei pensar em alternativas de incluir a tecnologia na sala de aula e acabei me envolvendo e me identificando com programação, principalmente com a parte de front-end. Sou do tipo de pessoa que gosta sempre de se desafiar, resolver problemas e de se aprimorar. Me interessei pela parte front-end justamente por ter essa característica criativa e visual, tenho certeza de que me encaixo muito bem com ela.</p>
                 </div>
             </div>
         </section>
