--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
         <div id="iburguer" onclick="openMenu()">
             <span id="burguer" class="material-icons">menu</span>
           </div>
-          <menu id="itens">
+          <nav id="itens">
             <ul>
               <li class="botton">
                 <a href="index.html">Home</a>
               </li>
               <li class="botton">
-                <a href="#">Quem sou</a>
+                <a href="#about-me-section">Quem sou</a>
               </li>
               <li class="botton">
-                <a href="#">O que faço</a>
+                <a href="#skills">O que faço</a>
               </li>
               <li class="botton">
                 <a href="#">Tools</a>
@@ -57,7 +57,7 @@
                 <a href="#">Fale conosco</a>
               </li>
             </ul>
-          </menu>
+        </nav>
 
     </header>
     <main>
@@ -79,7 +79,7 @@
             </div>
         </section>
 
-        <section class="skills">
+        <section id="skills">
             <h2>Skills</h2>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, corrupti earum. Et placeat neque
