--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
-    <script src="index.js"></script>
+    <script src="app.js"></script>
     <title>CV Digital</title>
 </head>
 
@@ -45,10 +45,10 @@
                 <a href="index.html">Home</a>
               </li>
               <li class="botton">
-                <a href="#about-me-section">Quem sou</a>
+                <a href="#about-me-section"onclick="smoothScroll('#about-me-section', 1000)" >Quem sou</a>
               </li>
               <li class="botton">
-                <a href="#skills">O que faço</a>
+                <a href="#skills" onclick="smoothScroll('#skills', 1000)">O que faço</a>
               </li>
               <li class="botton">
                 <a href="#">Tools</a>
