--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             src="assets/Imagens/linkedin.png" height="30px" alt="linkedin-logo"></a></li>
             </ul>
             <ul id="contato">
-                <li><a href="https://contate.me/miguel-amaral-dev">Contato:</a></li>
+                <li><a href="https://contate.me/miguel-amaral-dev" target="_blank">Contato:</a></li>
                 <li>(81) 9 9637-9353</li>
             </ul>
         </div>
@@ -45,23 +45,23 @@
                 <a href="index.html">Home</a>
               </li>
               <li class="botton">
-                <a href="#about-me-section"onclick="smoothScroll('#about-me-section', 1000)" >Quem sou</a>
+                <a href="#about-me"onclick="smoothScroll('#about-me', 1000)" >Quem sou</a>
               </li>
               <li class="botton">
                 <a href="#skills" onclick="smoothScroll('#skills', 1000)">O que faço</a>
               </li>
               <li class="botton">
-                <a href="#">Tools</a>
+                <a href="#portfolio" onclick="smoothScroll('#portfolio', 1000)">Portfólio</a>
               </li>
               <li class="botton">
-                <a href="#">Fale conosco</a>
+                <a href="#contact" onclick="smoothScroll('#contact', 1000)">Fale Comigo</a>
               </li>
             </ul>
         </nav>
 
     </header>
     <main>
-        <section id="about-me-section">
+        <section id="about-me">
             <div class="conteiner">
                 <div class="quote">
                     <h2>Citação</h2>
@@ -91,55 +91,34 @@
                 facilis, consectetur fuga, quisquam repellendus consequatur officiis adipisci sunt nihil illo
                 repellat est!</p>
         </section>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, corrupti earum. Et placeat neque
-            soluta, omnis, eveniet excepturi maxime dolore, nostrum sed inventore qui? Atque ipsum totam itaque
-            voluptatem architecto Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae odio dolorum
-            suscipit, modi veniam dolores repellat repellendus officia sit. Fugit repudiandae neque quasi itaque qui
-            pariatur minus nulla temporibus a Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
-            nesciunt ducimus possimus suscipit laudantium impedit expedita eveniet facilis, consectetur fuga,
-            quisquam repellendus consequatur officiis adipisci sunt nihil illo repellat est!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, corrupti earum. Et placeat neque
-            soluta, omnis, eveniet excepturi maxime dolore, nostrum sed inventore qui? Atque ipsum totam itaque
-            voluptatem architecto Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae odio dolorum
-            suscipit, modi veniam dolores repellat repellendus officia sit. Fugit repudiandae neque quasi itaque qui
-            pariatur minus nulla temporibus a Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
-            nesciunt ducimus possimus suscipit laudantium impedit expedita eveniet facilis, consectetur fuga,
-            quisquam repellendus consequatur officiis adipisci sunt nihil illo repellat est!</p>
-        <section class="sec-img">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque vel quibusdam inventore voluptate autem
-            libero aut optio, earum non nostrum quos laborum voluptatem ipsa? Doloremque quae debitis magni quis
-            enim. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat neque rem amet numquam obcaecati
-            officia vero impedit voluptatibus laboriosam. Neque, vero id? Similique earum mollitia culpa temporibus
-            fugiat quo dicta.lorem Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate, ab fugiat
-            aut blanditiis tenetur excepturi saepe repellendus nam velit cumque nostrum minima magni alias.
-            Perspiciatis totam velit aliquam qui nulla!Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Cumque vel quibusdam inventore voluptate autem libero aut optio, earum non nostrum quos laborum
-            voluptatem ipsa? Doloremque quae debitis magni quis enim. Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Fugiat neque rem amet numquam obcaecati officia vero impedit voluptatibus laboriosam.
-            Neque, vero id? Similique earum mollitia culpa temporibus fugiat quo dicta.lorem Lorem ipsum, dolor sit
-            amet consectetur adipisicing elit. Cupiditate, ab fugiat aut blanditiis tenetur excepturi saepe
-            repellendus nam velit cumque nostrum minima magni alias. Perspiciatis totam velit aliquam qui
-            nulla!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque vel quibusdam inventore voluptate
-            autem libero aut optio, earum non nostrum quos laborum voluptatem ipsa? Doloremque quae debitis magni
-            quis enim. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat neque rem amet
+        
+        <section id="portfolio">
+            <h2>Portfólio</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint illum doloremque, sit placeat distinctio ex. Non cupiditate repellat, unde, voluptatem, ducimus officia qui a fuga maiores molestias fugiat facilis eum?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium illo esse quisquam magnam, et impedit nam, unde possimus debitis in voluptates, ut sed! Doloremque sunt voluptates magni, blanditiis id a?</p>
+            
         </section>
-        <section class="sec-img">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque vel quibusdam inventore voluptate autem
-            libero aut optio, earum non nostrum quos laborum voluptatem ipsa? Doloremque quae debitis magni quis
-            enim. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat neque rem amet numquam obcaecati
-            officia vero impedit voluptatibus laboriosam. Neque, vero id? Similique earum mollitia culpa temporibus
-            fugiat quo dicta.lorem Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate, ab fugiat
-            aut blanditiis tenetur excepturi saepe repellendus nam velit cumque nostrum minima magni alias.
-            Perspiciatis totam velit aliquam qui nulla!Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Cumque vel quibusdam inventore voluptate autem libero aut optio, earum non nostrum quos laborum
-            voluptatem ipsa? Doloremque quae debitis magni quis enim. Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Fugiat neque rem amet numquam obcaecati officia vero impedit voluptatibus laboriosam.
-            Neque, vero id? Similique earum mollitia culpa temporibus fugiat quo dicta.lorem Lorem ipsum, dolor sit
-            amet consectetur adipisicing elit. Cupiditate, ab fugiat aut blanditiis tenetur excepturi saepe
-            repellendus nam velit cumque nostrum minima magni alias. Perspiciatis totam velit aliquam qui
-            nulla!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque vel quibusdam inventore voluptate
-            autem libero aut optio, earum non nostrum quos laborum voluptatem ipsa? Doloremque quae debitis magni
-            quis enim. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat neque rem amet
+        <section id="contact">
+            <h2>Fale comigo</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque vel quibusdam inventore voluptate autem
+                libero aut optio, earum non nostrum quos laborum voluptatem ipsa? Doloremque quae debitis magni quis
+                enim. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat neque rem amet numquam obcaecati
+                officia vero impedit voluptatibus laboriosam. Neque, vero id? Similique earum mollitia culpa temporibus
+                fugiat quo dicta.lorem Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate, ab fugiat
+                aut blanditiis tenetur excepturi saepe repellendus nam velit cumque nostrum minima magni alias.
+                Perspiciatis totam velit aliquam qui nulla!Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Cumque vel quibusdam inventore voluptate autem libero aut optio, earum non nostrum quos laborum
+                voluptatem ipsa? Doloremque quae debitis magni quis enim. Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Fugiat neque rem amet numquam obcaecati officia vero impedit voluptatibus laboriosam.
+                Neque, vero id? Similique earum mollitia culpa temporibus fugiat quo dicta.lorem Lorem ipsum, dolor sit
+                amet consectetur adipisicing elit. Cupiditate, ab fugiat aut blanditiis tenetur excepturi saepe
+                repellendus nam velit cumque nostrum minima magni alias. Perspiciatis totam velit aliquam qui
+                nulla!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque vel quibusdam inventore voluptate
+                autem libero aut optio, earum non nostrum quos laborum voluptatem ipsa? Doloremque quae debitis magni
+                quis enim. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat neque rem amet
+            </p>
+
         </section>
         <section class="sec-img">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque vel quibusdam inventore voluptate autem
