--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="index.html">Home</a>
               </li>
               <li class="botton">
-                <a href="#about-me"onclick="smoothScroll('#about-me', 1000)" >Quem sou</a>
+                <a href="#about-me-section"onclick="smoothScroll('#about-me-section', 1000)" >Quem sou</a>
               </li>
               <li class="botton">
                 <a href="#skills" onclick="smoothScroll('#skills', 1000)">O que faço</a>
@@ -61,7 +61,7 @@
 
     </header>
     <main>
-        <section id="about-me">
+        <section id="about-me-section">
             <div class="conteiner">
                 <div class="quote">
                     <h2>Citação</h2>
