--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
                     <input type="hidden" name="accessKey" value="726f8d66-321f-4cb1-8a7d-2913dd2e38a2">
                     
-                    <input type="hidden" name="redirectTo" value="http://127.0.0.1:5500/assets/redirect-form.html">
+                    <input type="hidden" name="redirectTo" value="https://miguelamaral254.github.io/CV-Online/assets/redirect-form">
                   </form>
             </div>
 
