--- a/index.html
+++ b/index.html
@@ -93,7 +93,11 @@
         <section id="object-skills"class="section">
             <h2>Skills</h2>
             <div>
-                <img src="assets/Imagens/" alt="">
+                <img src="assets/Imagens/Logo-html-5.png" alt="logo-html5" height="150px">
+                <img src="assets/Imagens/Logo-css-3.png" alt="logo-html5" height="150px">
+                <img src="assets/Imagens/Logo-js.png" alt="logo-html5" height="150px">
+                <img src="assets/Imagens/logo-php.png" alt="logo-html5" height="150px">
+                <img src="assets/Imagens/logo-mysql.png" alt="logo-html5" height="150px">
             </div>
            
         </section>
@@ -130,7 +134,7 @@
                     <textarea id="message" name="message" cols="30" rows="10" placeholder="Digite sua mensagem..." required></textarea>
                 
                     <button type="submit" class="btn">Enviar 
-                        <span class="material-icons">mail</span>
+                        <span class="material-icons">email</span>
                     </button>
 
                     <input type="hidden" name="accessKey" value="726f8d66-321f-4cb1-8a7d-2913dd2e38a2">
