--- a/index.html
+++ b/index.html
@@ -92,29 +92,26 @@
 
         <section id="object-skills"class="section">
             <h2>Skills</h2>
-            <div>
-                <img src="assets/Imagens/Logo-html-5.png" alt="logo-html5" height="150px">
-                <img src="assets/Imagens/Logo-css-3.png" alt="logo-html5" height="150px">
-                <img src="assets/Imagens/Logo-js.png" alt="logo-html5" height="150px">
-                <img src="assets/Imagens/logo-php.png" alt="logo-html5" height="150px">
-                <img src="assets/Imagens/logo-mysql.png" alt="logo-html5" height="150px">
+            <div id="skills">
+                <img src="assets/Imagens/Logo-html-5.png" alt="logo-html5" height="150px" class="skill">
+                <img src="assets/Imagens/Logo-css-3.png" alt="logo-html5" height="150px" class="skill">
+                <img src="assets/Imagens/Logo-js.png" alt="logo-html5" height="150px" class="skill">
+                <img src="assets/Imagens/logo-php.png" alt="logo-html5" height="150px" class="skill">
+                <img src="assets/Imagens/logo-mysql.png" alt="logo-html5" height="150px" class="skill">
+                <img src="assets/Imagens/Logo-react.png" alt="logo-html5" height="150px" class="skill">
             </div>
            
         </section>
 
         <section id="object-portfolio"  class="section">
             <h2>Portfólio</h2>
-            <div class="carousel-container">
-                <div class="carousel-slide">
-                  <img src="imagem1.jpg">
-                  <img src="imagem2.jpg">
-                  <img src="imagem3.jpg">
-                  <img src="imagem3.jpg">
-                  <img src="imagem3.jpg">
-                </div>
-                <button id="prevBtn">Anterior</button>
-                <button id="nextBtn">Próximo</button>
-              </div>
+            <div id="conteiner">
+                <div class="box">d1</div>
+                <div class="box">d2</div>
+                <div class="box">d3</div>
+                <div class="box">d4</div>
+                <div class="box">d5</div>
+            </div>
               
 
         </section>
